overall CSS changes to prevent overflow, and fit main-container into viewport

--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,36 +1,59 @@
-.leaflet-container {
-    width: 100%; 
-    height: 90vh; 
-    margin: 0 1rem 1rem 0; 
+h1.title {
+    text-align: center; 
 }
 
-.container {
+.main-container {
+    overflow: hidden; 
+    width: 95%; 
+    height: 85vh; 
+    margin: 0vh auto 0vh auto; 
     display: flex; 
     flex-direction: row; 
-    justify-content: left; 
 }
 
 .sideBar {
+    background-color: #fff; 
+    width: 520px; 
+    max-width: 50%; 
     display: flex; 
-    flex-flow: column; 
-    width: 550px; 
+    flex-direction: column; 
+}
+
+.select-detect-container {
+    margin: 0 0 10px 0; 
+    padding: 5px 0 0 10px; 
+    display: flex; 
+    flex-direction: row; 
+    flex-wrap: wrap; 
+    column-gap: 10px; 
+    row-gap: 5px; 
+    justify-content: left; 
+    align-items: center; 
+}
+
+.routing-container {
+    overflow-x: hidden; 
+    overflow-y: scroll; 
+}
+
+.leaflet-container {
+    width: 100%; 
+    height: 100%; 
+}
+
+/* .nav {
+    background-color: #cae2f5; 
+    padding: 0 1rem; 
+} */
+
+select {
+    width: fit-content; 
+    margin: 5px 0 0 0; 
+    padding: 5px 0 5px 5px; 
 }
 
 .search-container {
     display: flex; 
     flex-direction: row; 
     justify-content: right; 
-}
-
-.nav {
-    background-color: #cae2f5; 
-    padding: 0 1rem; 
-}
-
-h1 {
-    text-align: center; 
-}
-
-select {
-    width: 250px; 
 }
